# hellofit_llm

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py  exceptions.py  logger.py  responses.py  utils.py  vectorstore.py
app/diet/: dummy.py  prompt.py  router.py  schemas.py  service.py
app/workout/: prompt.py  router.py  schemas.py  service.py
faiss_index/: index.pkl
scripts/: build_index.py
