[tool.poetry]
name = "hellofit-llm"
version = "0.1.0"
description = "HelloFit LLM Recommendation Server"
authors = ["Your Name <you@email.com>"]
readme = "README.md"
packages = [{ include = "app" }]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.3.20"
mistralai = "^1.9.10"
langchain-mistralai = "^0.2.12"
mysql-connector-python = "^9.4.0"
asyncmy = "^0.2.10"
faiss-cpu = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
